--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
+.app {
+    text-align: center;
+}
+
 td {
     /* border: 1px solid black; */
     text-align: center;
     width: 100px;
+}
+
+button {
+    box-shadow: 2px 2px #888888;
 }
